--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-viewer": "^3.2.2",
+    "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
