--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-viewer": "^3.2.2",
+    "sass": "^1.50.1",
     "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^2.1.4"
   },
